fix overlapping h2 error

--- a/client/src/styles/pages/LandingPage.scss
+++ b/client/src/styles/pages/LandingPage.scss
@@ -99,8 +99,12 @@
     }
 
     #landing-page {
+        
         h2 {
             margin: 0 50px;
+        }
+        .landing {
+            width: 80%;
         }
     }
 }
